force-app/main/default/objects/Equipment_Funding_Detail__c/Equipment_Funding_Detail__c.object-meta.xml
<CustomObject>
    <label>Equipment Funding Detail</label>
    <nameField>
        <displayFormat>EFD-{0000000000}</displayFormat>
        <label>Equipment Funding Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Funding Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>