force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Dealer_Charges__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Charges__c</fullName>
    <label>Dealer Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>