force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <formula>Party__r.clcommon__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Name</label>
    <type>Text</type>
</CustomField>