force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>genesis__Application_Equipment__c</referenceTo>
    <relationshipLabel>Equipment Funding Detail</relationshipLabel>
    <relationshipName>Equipment_Funding_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>