force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Net_Dealer_Funding__c.field-meta.xml
<CustomField>
    <fullName>Net_Dealer_Funding__c</fullName>
    <description>Net delear funding = dealer charges - trade up amount</description>
    <formula>Dealer_Charges__c - Trade_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Dealer Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>