force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Equipment Funding Detail</relationshipLabel>
    <relationshipName>Equipment_Funding_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>