force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Percent_Selling_of_Financed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Selling_of_Financed__c</fullName>
    <description>To get the percentage of Transaction (Financed Amount) = selling price of equipment / financed amt * 100</description>
    <formula>(Equipment__r.genesis__Estimated_Selling_Price__c  /  Application__r.Financed_Amount_Formula__c)  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Selling of Financed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>