force-app/main/default/objects/Equipment_Funding_Detail__c/fields/Trade_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trade_Amount__c</fullName>
    <description>Net Trade Amount from Application Lease Dash Board</description>
    <formula>( Application__r.Net_Trade_Up_Amount__c   *  Percent_Selling_of_Financed__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>